--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// S3 관련 설정
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.281'
 }
 
 tasks.named('test') {
