Edit did not commit Error

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: ${{ secrets.DOCKER_USERNAME }}/donggukreview
+          image: ${{ secrets.DOCKER_USERNAME }}/chickstable
           tags: be-${{ secrets.REGISTER_VERSION }}
           registry: docker.io
           dockerfile: Dockerfile
