--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.281'
 }
 
+bootJar {
+	archiveFileName = "${rootProject.name}.jar"
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
